# kobot-simulator

./: .env.simulator.example  .gitignore  README.md  docker-compose.simulator-prod.yml  setup.sh
camera/: README.md  fake_stream.sh
docker/: Dockerfile.kobot  entrypoint.sh
ros2_ws/src/kobot_simulator/: package.xml  setup.cfg  setup.py
ros2_ws/src/kobot_simulator/kobot_simulator/: __init__.py  gps_publisher.py  imu_publisher.py  lidar_publisher.py  mqtt_bridge.py  system_status_publisher.py
scripts/: send_camera_error.sh  start_kobot.sh
tests/: README.md  test_integration.sh  test_phase1_docker.sh  test_phase2_ros2.sh  test_phase3_imu.sh  test_phase4_lidar.sh  test_phase5_system.sh  test_phase6_mqtt_bridge.sh
