<?xml version="1.0"?>
<?xml version="1.0"?>
<package format="3">
  <name>kobot_simulator</name>
  <version>0.1.0</version>
  <description>KOBOT 시뮬레이터 - ROS2 센서 노드 패키지</description>

  <maintainer email="dev@example.com">KOBOT Team</maintainer>
  <license>MIT</license>

  <buildtool_depend>ament_python</buildtool_depend>

  <!-- ROS2 Core -->
  <depend>rclpy</depend>

  <!-- Standard Messages -->
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>

  <!-- Python Dependencies -->
  <exec_depend>python3-numpy</exec_depend>
  <exec_depend>python3-yaml</exec_depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
